[project]
name = "github-overlord"
version = "0.8.0"
description = "Automatically merge Dependabot PRs in public repositories"
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
readme = "README.md"
keywords = ["github", "dependabot", "automation"]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pygithub>=2.4.0",
    "click>=8.1.7",
    "python-decouple-typed>=3.11.0",
    "funcy-pipe>=0.11.1,<0.15.0",
    "structlog>=24.4,<26.0",
    "apscheduler>=3.10.4",
    "openai>=1.52.2,<3.0.0",
    "pydantic-ai-slim[google]>=0.0.18",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/iloveitaly/github-overlord"
Repository = "https://github.com/iloveitaly/github-overlord"

[project.scripts]
github-overlord = "github_overlord:cli"

[dependency-groups]
dev = [
    "isort>=5.13.2,<8.0.0",
    "black>=24.10,<27.0",
    "pyright>=1.1.386",
    "pylint>=3.3.1,<5.0.0",
]

[tool.uv]
package = true

[tool.isort]
profile = "black"
# helpful when copy/pasting GPT code
float_to_top = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_overlord"]
include = ["data/*.j2"]
